--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <!-- End #education -->
 
     <div id="education" style="background-color: #effeff;">
-        <h2 class="heading">Publication</h2>
+        <h2 class="heading">Publications</h2>
 
         <div class="education-block">
             <h3>Cervical Spine Fracture Detection Through Two-Stage Approach of Mask Segmentation and
@@ -332,12 +332,12 @@
             </div>
 
             <div data-date=" September/2023 – Present">
-                <h3> TDF Project: AI-based ChatBOT in Programming Education</h3>
+                <h3> Teaching Development Fund Project: AI-based ChatBOT in Programming Education</h3>
                 <h4> Research Assistant</h4>
                 <p>
                     Supervisor: 
-                    <p>Erick Purwanto [Erick.Purwanto@xjtlu.edu.cn]; </p>
-                    <p>Yihong Wang [Yihong.Wang@xjtlu.edu.cn]; </p>
+                    <p>Erick Purwanto [Erick.Purwanto@xjtlu.edu.cn]</p>
+                    <p>Yihong Wang [Yihong.Wang@xjtlu.edu.cn]</p>
                     <p>Thomas Selig [Thomas.Selig@xjtlu.edu.cn]</p>
                 </p>
                 <ol>
