--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <h3> 2023 Summer Undergraduate Research Fellowship (SURF)</h3>
                 <h4>Research Fellow</h4>
                 <p>
-                    Supervisor: Erick Purwanto [Erick.Purwanto@xjtlu.edu.cn]
+                    <p><a href="https://scholar.xjtlu.edu.cn/en/persons/ErickPurwanto" title="Access the detailed profile" target="_blank"> Erick Purwanto</a></p>
                 </p>
                 <ol>
                     <strong>Replication and Improvement of the Cervical Spine Fracture Detection Research (Publish a paper at PlatCon)</strong>
@@ -336,9 +336,9 @@
                 <h4> Research Assistant</h4>
                 <p>
                     Supervisor: 
-                    <p>Erick Purwanto [Erick.Purwanto@xjtlu.edu.cn]</p>
-                    <p>Yihong Wang [Yihong.Wang@xjtlu.edu.cn]</p>
-                    <p>Thomas Selig [Thomas.Selig@xjtlu.edu.cn]</p>
+                    <p><a href="https://scholar.xjtlu.edu.cn/en/persons/ErickPurwanto" title="Access the detailed profile" target="_blank"> Erick Purwanto</a></p>
+                    <p><a href="https://scholar.xjtlu.edu.cn/en/persons/YihongWang" title="Access the detailed profile" target="_blank"> Yihong Wang</a></p>
+                    <p><a href="https://scholar.xjtlu.edu.cn/en/persons/ThomasSelig" title="Access the detailed profile" target="_blank"> Thomas Selig</a></p>
                 </p>
                 <ol>
                     <strong> 
@@ -556,8 +556,8 @@
     <script>
         var link = document.getElementById("transcriptLink");
         var image = document.getElementById("transcriptImage");
-    // 确保初始状态下图片是隐藏的
-    image.style.display = "none";
+        // 确保初始状态下图片是隐藏的
+        image.style.display = "none";
         // 点击后显示/隐藏图片
         link.onclick = function(event) {
             event.preventDefault();  // 防止页面跳转
