--- a/index.html
+++ b/index.html
@@ -258,12 +258,13 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\advanceHE.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\advanceHE.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3 style=" margin-bottom: 10px;">Received the <strong>Global Impact Grants 2023-24</strong> from Advance HE</h3>
+                        <h3 style=" margin-bottom: 10px;">Achieved the <strong>Global Impact Grants 2023-24</strong> from AdvanceHE</h3>
                         <h3 style="font-size: medium; font-style: italic; margin-top: -5px; margin-bottom: -3px;">Top 15 / £1000</h3>
-                        <p><a href="https://advance-he.ac.uk/membership/member-benefits-2023-24/global-impact-grants-2023-24" target="_blank">Access the the Global Impact Grants 2023-24</a></p>
+                        <p style="margin: 5px 0;margin-top: 30px;"><a href="https://advance-he.ac.uk/membership/member-benefits-2023-24/global-impact-grants-2023-24" target="_blank">Access the the Global Impact Grants 2023-24</a></p>
+                        <p style="margin: 2px 0;"><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Access the full study (Volume 1, Page 5) on advanceHE  </a></p>
                     </div>
                 </div>
                 <!-- End .project -->
