--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Recognized as a <strong>Summer Undergraduate Research Fellow</strong> (2023) following participation in the program and poster competition</h3>
+                        <p style="margin: 2px 0;"><a href="https://github.com/Sushang-Li/personalpage/blob/master/images/SURF23_Poster.jpeg" target="_blank">Check the Poster of the SURF (2023) </a></p> 
                     </div>
                 </div>
                 <!-- End .project -->
