--- a/index.html
+++ b/index.html
@@ -144,31 +144,35 @@
             <span class="education-date">September/2021 – July/2025</span>
             <h4>Bachelor of Information and Computing Science</h4>
             <ul class="course-list">
-                <li><strong>Java Programming</strong><span class="course-grade">92</span></li>
-                <li><strong>Computer Systems</strong><span class="course-grade">84</span></li>
-                <li><strong>Data Structures</strong><span class="course-grade">84</span></li>
-                <li><strong>Artificial Intelligence</strong><span class="course-grade">73</span></li>
-                <li><strong>Introduction to Databases</strong><span class="course-grade">69</span></li>
-                <li><strong>Operating Systems Concepts</strong><span class="course-grade">78</span></li>
-                <li><strong>Discrete Mathematics and Statistics</strong><span class="course-grade">64</span></li>
-                <li><strong>Algorithmic Foundations and Problem Solving</strong><span class="course-grade">73</span></li>
-                <li><strong>Introduction to Networking</strong><span class="course-grade">82</span></li>
-                <li><strong>Software Engineering I</strong><span class="course-grade">67</span></li>
-                <li><strong>Computer Graphics</strong><span class="course-grade">65</span></li>
-                <li><strong>Decision Computation and Language</strong><span class="course-grade">80</span></li>
-                <li><strong>Software Engineering Group Project</strong><span class="course-grade">77</span></li>
-                <li><strong>Advanced OO Programming</strong><span class="course-grade">87</span></li>
-                <li><strong>Human-Centric Computing</strong><span class="course-grade">71</span></li>
-                <li><strong>Complexity of Algorithms</strong><span class="course-grade">57</span></li>
-                <li><strong>Linear Algebra</strong><span class="course-grade">75</span></li>
-                <li><strong>Calculus</strong><span class="course-grade">83</span></li>
-                <li><strong>Multivariable Calculus</strong><span class="course-grade">70</span></li>
+                <li><strong>Linear Algebra</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;75</span></li>
+                <li><strong>Calculus</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;83</span></li>
+                <li><strong>Multivariable Calculus</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;70</span></li>
+                <li><strong>Java Programming</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;92</span></li>
+                <li><strong>Computer Systems</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;84</span></li>
+                <li><strong>Data Structures</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;84</span></li>
+                <li><strong>Artificial Intelligence</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;73</span></li>
+                <li><strong>Introduction to Databases</strong><span class="course-grade">A-&nbsp;&nbsp;&nbsp;69</span></li>
+                <li><strong>Operating Systems Concepts</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;78</span></li>
+                <li><strong>Discrete Mathematics and Statistics</strong><span class="course-grade">B+ &nbsp;64</span></li>
+                <li><strong>Algorithmic Foundations and <br> Problem Solving</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;73</span></li>
+                <li><strong>Introduction to Networking</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;82</span></li>
+                <li><strong>Software Engineering I</strong><span class="course-grade">A-&nbsp;&nbsp;&nbsp;67</span></li>
+                <li><strong>Computer Graphics</strong><span class="course-grade">A-&nbsp;&nbsp;&nbsp;65</span></li>
+                <li><strong>Decision Computation and Language</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;80</span></li>
+                <li><strong>Software Engineering Group Project</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;77</span></li>
+                <li><strong>Advanced OO Programming</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;87</span></li>
+                <li><strong>Human-Centric Computing</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;71</span></li>
+                <li><strong>Complexity of Algorithms</strong><span class="course-grade">B&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;57</span></li>
+
             </ul>
             <div class="gpa">
-                <p><strong>WES GPA:</strong> 3.77/4.0</p>
+                <p><strong>WES GPA:</strong> 3.77/4.0 &nbsp;&nbsp; <strong><a href="#" id="transcriptLink1">Check the WES unofficial transcript</a></strong>
+                    <img id="transcriptImage1" src="images\wes_report.png" alt="WES Unofficial Transcript"></p> 
+                
                 <p><strong>Major GPA:</strong> 3.82/4.0</p>
                 <p> Ranked in the top 1.97% in Java Programming.</p>
 
+                <br>
                 <p><strong><a href="#" id="transcriptLink">Check the full official transcript and marking criteria</a></strong></p>
                 <img id="transcriptImage" src="images\xjtlu_Transcript.png" alt="Full Official Transcript">
             </div>
@@ -219,7 +223,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Achieved the <strong>Honourable Mention</strong> for MCM/ICM in 2023</h3>
-                        <h3 style="font-size: medium; font-style: italic;">Top 21%</h3>
+                        <h3 style="font-size: medium; font-style: italic;"><strong>Top 21%</strong></h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -241,7 +245,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Achieved <strong>Third Prize</strong> in the IEEE CyberC 2023 Data Analysis Competition</h3>
-                        <h3 style="font-size: medium; font-style: italic;">Top 3</h3>
+                        <h3 style="font-size: medium; font-style: italic;"><strong>Top 3</strong></h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -252,7 +256,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Achieved <strong>Second Prize</strong> at the 2023 XJTLU Student Research-Oriented Learning Summit</h3>
-                        <h3 style="font-size: medium; font-style: italic;">1000 RMB</h3>
+                        <h3 style="font-size: medium; font-style: italic;"><strong>1000 RMB</strong></h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -263,7 +267,7 @@
                     </div>
                     <div class="project-info">
                         <h3 style=" margin-bottom: 10px;">Achieved the <strong>Global Impact Grants 2023-24</strong> from AdvanceHE</h3>
-                        <h3 style="font-size: medium; font-style: italic; margin-top: -5px; margin-bottom: -3px;">Top 15 / £1000</h3>
+                        <h3 style="font-size: medium; font-style: italic; margin-top: -5px; margin-bottom: -3px;"><strong>Top 15 / £1000</strong></h3>
                         <p style="margin: 5px 0;margin-top: 30px;"><a href="https://advance-he.ac.uk/membership/member-benefits-2023-24/global-impact-grants-2023-24" target="_blank">Access the the Global Impact Grants 2023-24</a></p>
                         <p style="margin: 2px 0;"><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Access the full study (Volume 1, Page 5) on advanceHE  </a></p>
                     </div>
@@ -276,7 +280,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Honored with an <strong>Honorable Mention</strong> in the CPT208 Human-Centric Computing</h3>
-                        <h3 style="font-size: medium; font-style: italic;">Top 10%</h3>
+                        <h3 style="font-size: medium; font-style: italic;"><strong>Top 10%</strong></h3>
                     </div>
                 </div>
                 <!-- End .project -->
@@ -569,6 +573,21 @@
                 image.style.display = "none";
             }
         }
+
+        // 管理第二个图片和链接
+    var link2 = document.getElementById("transcriptLink1");
+    var image2 = document.getElementById("transcriptImage1");
+    // 确保初始状态下图片是隐藏的
+    image2.style.display = "none";
+    // 点击后显示/隐藏第二个图片
+    link2.onclick = function(event) {
+        event.preventDefault();  // 防止页面跳转
+        if (image2.style.display === "none") {
+            image2.style.display = "block";
+        } else {
+            image2.style.display = "none";
+        }
+    }
     </script>
 </body>
 
