--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
                 <h3> 2023 Summer Undergraduate Research Fellowship (SURF)</h3>
                 <h4>Research Fellow</h4>
                 <p>
+                    Supervisor: 
                     <p><a href="https://scholar.xjtlu.edu.cn/en/persons/ErickPurwanto" title="Access the detailed profile" target="_blank"> Erick Purwanto</a></p>
                 </p>
                 <ol>
