--- a/index.html
+++ b/index.html
@@ -129,8 +129,21 @@
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>
-                        Placeholder
+                    <p style="font-size: 17.5px; text-align: justify; font-family: 'Arial', sans-serif;">
+                        <span class="custom-font-SmileySansOblique" style="color: #9400D3;">
+                            霆霓快雨 
+                        </span>
+                        describes the scene of a summer thunderstorm followed by immediate clear skies, which also can be referred to as 
+                        <span class="custom-font-SmileySansOblique" style="color: #9400D3;">
+                            Nimble as Lightning
+                        </span>.
+                        This term accurately summarizes my undergraduate research: <strong>1) </strong>reproducing a fracture detection model within <strong>two weeks</strong>; 
+                        <strong>2) </strong>identifying research gaps in few-shot classification, and within <strong>three weeks</strong>, building, experimenting, writing, and publishing 
+                        a paper; <strong>3) </strong>processing idea development, and prototyping a generative AI project for programming education <strong>in a month</strong>, which won in a campus 
+                        competition; <strong>4) </strong>learning React from scratch in <strong>a month</strong> and developing eight chatbot-response algorithm visualization modules in <strong>a month</strong>, 
+                        integrating them into a 30,000+ line project for a large-scale experiment, leading to an international competition win; 
+                        <strong>5) </strong>developing four graph algorithm visualization modules in <strong>three weeks</strong> for an IEEE TSE paper. Throughout this period, 
+                        I successfully managed four courses and up to three group projects and assisted with various other research tasks assigned by my supervisor.                    
                     </p>
                 </div>
             </div>
@@ -340,7 +353,7 @@
 
             <div data-date=" September/2023 – Present">
                 <h3> Teaching Development Fund Project: AI-based ChatBOT in Programming Education</h3>
-                <h4> Research Assistant</h4>
+                <h4> Research Assistant (Team of Two)</h4>
                 <p>
                     Supervisor: 
                     <p><a href="https://scholar.xjtlu.edu.cn/en/persons/ErickPurwanto" title="Access the detailed profile" target="_blank"> Erick Purwanto</a></p>
