--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
-                    <p style="font-size: 17.5px; text-align: justify; font-family: 'Arial', sans-serif;">
+                    <p style="font-size: 17.5px; text-align: justify; font-family: 'Arial', sans-serif; color: #333333;">
                         <span class="custom-font-SmileySansOblique" style="color: #9400D3;">
                             霆霓快雨 
                         </span>
