--- a/index.html
+++ b/index.html
@@ -222,6 +222,14 @@
             </div>
             <p><a href="https://doi.org/10.1109/CyberC58899.2023.00024" target="_blank">Read the full paper</a></p>
         </div>
+
+        <div class="education-block">
+            <h3>VisualCodeMOOC: Programming Course Platform Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
+            <h4>Co-first author</h4>
+            <div class="gpa">
+                <p><i>SoftwareX [Under Review: Submitted Oct. 2024]</i></p>
+            </div>
+        </div>
     </div>
     <!-- End #education -->
 
