--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <img src="images\MCM.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
-                        <h3>Achieved the <strong>Honourable Mention</strong> for MCM/ICM in 2023</h3>
+                        <h3>Achieved <strong>Honourable Mention</strong> for MCM/ICM in 2023</h3>
                         <h3 style="font-size: medium; font-style: italic;"><strong>Top 21%</strong></h3>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images\SURF.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                        <img src="images\SURF23.png" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
                     </div>
                     <div class="project-info">
                         <h3>Recognized as a <strong>Summer Undergraduate Research Fellow</strong> (2023) following participation in the program and poster competition</h3>
@@ -312,6 +312,18 @@
                     </div>
                     <div class="project-info">
                         <h3>Presented project outcomes as a <strong>Guest Speaker</strong> at EdVenture: Exploring Innovative Practices in Higher Education</h3>
+                    </div>
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images\SURF24_School_Winner.jpg" class="zoom-image" style="max-width: 300px; max-height: 300px;"/>
+                    </div>
+                    <div class="project-info">
+                        <h3>Achieved the Excellent Poster in SURF 2024 and presented research results at 2024 SURF Poster Fair as a <strong>School Winner</strong>.  </h3>
+                        <h3 style="font-size: medium; font-style: italic;"><strong>Top 5%</strong></h3>
+                        <p style="margin: 2px 0;"><a href="https://github.com/Sushang-Li/personalpage/blob/master/images/2024surf_poster.png" target="_blank">Check the Poster of the SURF (2024) </a></p> 
                     </div>
                 </div>
                 <!-- End .project -->
