--- a/index.html
+++ b/index.html
@@ -137,13 +137,16 @@
                         <span class="custom-font-SmileySansOblique" style="color: #9400D3;">
                             Nimble as Lightning
                         </span>.
-                        This term accurately summarizes my undergraduate research: <strong>1) </strong>reproducing a fracture detection model within <strong>two weeks</strong>; 
-                        <strong>2) </strong>identifying research gaps in few-shot classification, and within <strong>three weeks</strong>, building, experimenting, writing, and publishing 
-                        a paper; <strong>3) </strong>processing idea development, and prototyping a generative AI project for programming education <strong>in a month</strong>, which won in a campus 
+                        This term accurately summarizes my undergraduate research: <br> 
+                        <strong>1) </strong>reproducing a fracture detection model within <strong>two weeks</strong>; 
+                        <strong>2) </strong>identifying research gaps in few-shot classification, building, experimenting, writing, and publishing 
+                        a paper within <strong>three weeks</strong>; <strong>3) </strong>processing idea development, and prototyping a generative AI project for programming education <strong>in a month</strong>, which won in a campus 
                         competition; <strong>4) </strong>learning React from scratch in <strong>a month</strong> and developing eight chatbot-response algorithm visualization modules in <strong>a month</strong>, 
-                        integrating them into a 30,000+ line project for a large-scale experiment, leading to an international competition win; 
-                        <strong>5) </strong>developing four graph algorithm visualization modules in <strong>three weeks</strong> for an IEEE TSE paper. Throughout this period, 
-                        I successfully managed four courses and up to three group projects and assisted with various other research tasks assigned by my supervisor.                    
+                        integrating them into a 30,000+ line project for large-scale experiments, leading to an international competition win; 
+                        <strong>5) </strong>developing four graph algorithm visualization modules in <strong>three weeks</strong> for an IEEE TSE paper. 
+                        <br>
+                        Throughout this period, 
+                        I successfully managed eight courses and up to three group projects and assisted with various other research tasks assigned by my supervisor.                    
                     </p>
                 </div>
             </div>
