--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
                             Nimble as Lightning
                         </span>.
                         This term accurately summarizes my undergraduate research: <br> 
-                        <strong>1) </strong>reproducing a fracture detection model within <strong>two weeks</strong>; 
+                        <strong>1) </strong>reproducing a fracture detection model within <span class="custom-font-SmileySansOblique" style="color: #9400D3;">two weeks</span>; 
                         <strong>2) </strong>identifying research gaps in few-shot classification, building, experimenting, writing, and publishing 
-                        a paper within <strong>three weeks</strong>; <strong>3) </strong>processing idea development, and prototyping a generative AI project for programming education <strong>in a month</strong>, which won in a campus 
-                        competition; <strong>4) </strong>learning React from scratch in <strong>a month</strong> and developing eight chatbot-response algorithm visualization modules in <strong>a month</strong>, 
-                        integrating them into a 30,000+ line project for large-scale experiments, leading to an international competition win; 
-                        <strong>5) </strong>developing four graph algorithm visualization modules in <strong>three weeks</strong> for an IEEE TSE paper. 
+                        a <strong style="font-size: 17px;">paper</strong> within <span class="custom-font-SmileySansOblique" style="color: #9400D3;">three weeks</span>; <strong>3) </strong>processing idea development, 
+                        and prototyping a generative AI project for programming educationin <span class="custom-font-SmileySansOblique" style="color: #9400D3;">a month</span>, which won in a <strong style="font-size: 17px;">campus competition</strong>
+                        ; <strong>4) </strong>learning React from scratch in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">a month</span> and developing eight chatbot-response algorithm visualization modules in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">a month</span>, 
+                        integrating them into a 30,000+ line project for large-scale experiments, leading to an <strong style="font-size: 17px;">international competition</strong> win; 
+                        <strong>5) </strong>developing four graph algorithm visualization modules in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">three weeks</span> for an <strong style="font-size: 17px;">IEEE TSE paper</strong>. 
                         <br>
-                        Throughout this period, 
-                        I successfully managed eight courses and up to three group projects and assisted with various other research tasks assigned by my supervisor.                    
+                        Throughout this period, I successfully managed eight courses and up to three group projects and assisted with various other research tasks assigned by my supervisor.                    
                     </p>
                 </div>
             </div>
