--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                         <strong>1) </strong>reproducing a fracture detection model within <span class="custom-font-SmileySansOblique" style="color: #9400D3;">two weeks</span>; 
                         <strong>2) </strong>identifying research gaps in few-shot classification, building, experimenting, writing, and publishing 
                         a <strong style="font-size: 17px;">paper</strong> within <span class="custom-font-SmileySansOblique" style="color: #9400D3;">three weeks</span>; <strong>3) </strong>processing idea development, 
-                        and prototyping a generative AI project for programming educationin <span class="custom-font-SmileySansOblique" style="color: #9400D3;">a month</span>, which won in a <strong style="font-size: 17px;">campus competition</strong>
-                        ; <strong>4) </strong>learning React from scratch in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">a month</span> and developing eight chatbot-response algorithm visualization modules in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">a month</span>, 
+                        and prototyping a generative AI project for programming educationin <span class="custom-font-SmileySansOblique" style="color: #9400D3;">one month</span>, which won in a <strong style="font-size: 17px;">campus competition</strong>
+                        ; <strong>4) </strong>learning React from scratch in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">one month</span> and developing eight chatbot-response algorithm visualization modules in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">one month</span>, 
                         integrating them into a 30,000+ line project for large-scale experiments, leading to an <strong style="font-size: 17px;">international competition</strong> win; 
                         <strong>5) </strong>developing four graph algorithm visualization modules in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">three weeks</span> for an <strong style="font-size: 17px;">IEEE TSE paper</strong>. 
                         <br>
