--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                             Nimble as Lightning
                         </span>.
                         This term accurately summarizes my undergraduate research: <br> 
+                        <p style="margin-left: 2em;font-size: 17.5px; text-align: justify; font-family: 'Arial', sans-serif; color: #333333;">
                         <strong>1) </strong>reproducing a fracture detection model within <span class="custom-font-SmileySansOblique" style="color: #9400D3;">two weeks</span>; 
                         <strong>2) </strong>identifying research gaps in few-shot classification, building, experimenting, writing, and publishing 
                         a <strong style="font-size: 17px;">paper</strong> within <span class="custom-font-SmileySansOblique" style="color: #9400D3;">three weeks</span>; <strong>3) </strong>processing idea development, 
@@ -145,8 +146,10 @@
                         ; <strong>4) </strong>learning React from scratch in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">one month</span> and developing eight chatbot-response algorithm visualization modules in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">one month</span>, 
                         integrating them into a 30,000+ line project for large-scale experiments, leading to an <strong style="font-size: 17px;">international competition</strong> win; 
                         <strong>5) </strong>developing four graph algorithm visualization modules in <span class="custom-font-SmileySansOblique" style="color: #9400D3;">three weeks</span> for an <strong style="font-size: 17px;">IEEE TSE paper</strong>. 
-                        <br>
+                        </p>
+                        <p style="font-size: 17.5px; text-align: justify; font-family: 'Arial', sans-serif; color: #333333;">
                         Throughout this period, I successfully managed eight courses and up to three group projects and assisted with various other research tasks assigned by my supervisor.                    
+                        </p>
                     </p>
                 </div>
             </div>
