--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="education-block">
             <h3>Cervical Spine Fracture Detection Through Two-Stage Approach of Mask Segmentation and
                 Windowing Based on Convolutional Neural Network</h3>
-            <h4>Co-first author</h4>
+            <h4>Kim Doyeon; Ning Xujia; Liang Kaicheng; Ni Yi; Wang Duan; <strong style="color: #333333;">Li Mingyuan</strong>; Wang Yichuan; Purwanto Erick; Man Lok Ka</h4>
             <div class="gpa">
                 <p><i>International Conference on Platform Technology and Service (PlatCon), 2023</i></p>
             </div>
@@ -223,7 +223,7 @@
         <div class="education-block">
             <h3>Patch-Based Multi-Level Attention Mechanism for Few-Shot Multi-Label Medical Image
                 Classification</h3>
-            <h4>Co-first author</h4>
+            <h4><strong style="color: #333333;">Li Mingyuan</strong>; Wang Yichuan; Huang Junfeng; Purwanto Erick; Man Lok Ka</h4>
             <div class="gpa">
                 <p><i>The 15th International Conference on Cyber-Enabled Distributed Computing and Knowledge
                     Discovery, 2023</i></p>
@@ -232,8 +232,17 @@
         </div>
 
         <div class="education-block">
+            <h3>Chatbot-Powered Learning for Sustainable Education in Programming</h3>
+            <h4>Purwanto Erick; Li Na; Zhang Qing; Selig Thomas; Wang Yihong; Ma Teng; Juwono Filbert; Fan Pengfei, (student member) <strong style="color: #333333;">Li Mingyuan</strong> and Wang Duan</h4>
+            <div class="gpa">
+                <p><i>Global Impact Grants 2024 - Education for Sustainable Development and Building Future Leaders</i></p>
+            </div>
+            <p><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Read the full paper</a></p>
+        </div>
+
+        <div class="education-block">
             <h3>VisualCodeMOOC: Programming Course Platform Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
-            <h4>Co-first author</h4>
+            <h4><strong style="color: #333333;">Li Mingyuan</strong>; Wang Duan; Purwanto Erick; Selig Thomas; Zhang Qing; Liang Hai-Ning</h4>
             <div class="gpa">
                 <p><i>SoftwareX [Under Review: Submitted Oct. 2024]</i></p>
             </div>
